--- a/custom-about: experts.hbs
+++ b/custom-about: experts.hbs
@@ -12,14 +12,124 @@ into the {body} tag of the default.hbs template --}}
 {{> feature-image-to-banner}}
 
 <article class="article {{post_class}} {{#match @custom.post_image_style "Full"}}image-full{{else match @custom.post_image_style "=" "Small"}}image-small{{/match}}">
-
     <section class="gh-content gh-canvas">
         {{content}}
 
-        
+        <link rel="stylesheet" type="text/css" href="{{asset "built/author-list.css"}}" />
 
+        <div class="author-grid">
+            {{#get "authors" limit="all"}}
+                {{#foreach authors}}
+                    <a href="{{url}}">
+                        <div class="author-card">
+                            <div class="profile-image">
+                            {{#if profile_image}}
+                                <img src="{{img_url profile_image size="s"}}" alt="{{name}}">
+                            {{else}}
+                                <span class="profile-image-placeholder">{{name.[0]}}</span>
+                            {{/if}}
+                            </div>
+                            <h2>{{name}}</h2>
+                            <p>{{bio}}</p>
+                        </div>
+                    </a>
+                {{/foreach}}
+            {{/get}}
+<a href="/author/xinyu/">
+                        <div class="author-card">
+                            <div class="profile-image">
+                                <img src="/content/images/size/w300/2023/04/my-profile-picture.jpeg" alt="Xinyu Li">
+                            </div>
+                            <h2>Xinyu Li</h2>
+                            <p>Music junkie. Internet lover.</p>
+                        </div>
+                    </a>
+<a href="/author/xinyu/">
+                        <div class="author-card">
+                            <div class="profile-image">
+                                <img src="/content/images/size/w300/2023/04/my-profile-picture.jpeg" alt="Xinyu Li">
+                            </div>
+                            <h2>Xinyu Li</h2>
+                            <p>Music junkie. Internet lover.</p>
+                        </div>
+                    </a>
+<a href="/author/xinyu/">
+                        <div class="author-card">
+                            <div class="profile-image">
+                                <img src="/content/images/size/w300/2023/04/my-profile-picture.jpeg" alt="Xinyu Li">
+                            </div>
+                            <h2>Xinyu Li</h2>
+                            <p>Music junkie. Internet lover.</p>
+                        </div>
+                    </a>
+<a href="/author/xinyu/">
+                        <div class="author-card">
+                            <div class="profile-image">
+                                <img src="/content/images/size/w300/2023/04/my-profile-picture.jpeg" alt="Xinyu Li">
+                            </div>
+                            <h2>Xinyu Li</h2>
+                            <p>Music junkie. Internet lover.</p>
+                        </div>
+                    </a>
+<a href="/author/xinyu/">
+                        <div class="author-card">
+                            <div class="profile-image">
+                                <img src="/content/images/size/w300/2023/04/my-profile-picture.jpeg" alt="Xinyu Li">
+                            </div>
+                            <h2>Xinyu Li</h2>
+                            <p>Music junkie. Internet lover.</p>
+                        </div>
+                    </a>
+<a href="/author/xinyu/">
+                        <div class="author-card">
+                            <div class="profile-image">
+                                <img src="/content/images/size/w300/2023/04/my-profile-picture.jpeg" alt="Xinyu Li">
+                            </div>
+                            <h2>Xinyu Li</h2>
+                            <p>Music junkie. Internet lover.</p>
+                        </div>
+                    </a>
+<a href="/author/xinyu/">
+                        <div class="author-card">
+                            <div class="profile-image">
+                                <img src="/content/images/size/w300/2023/04/my-profile-picture.jpeg" alt="Xinyu Li">
+                            </div>
+                            <h2>Xinyu Li</h2>
+                            <p>Music junkie. Internet lover.</p>
+                        </div>
+                    </a>
+<a href="/author/xinyu/">
+                        <div class="author-card">
+                            <div class="profile-image">
+                                <img src="/content/images/size/w300/2023/04/my-profile-picture.jpeg" alt="Xinyu Li">
+                            </div>
+                            <h2>Xinyu Li</h2>
+                            <p>Music junkie. Internet lover.</p>
+                        </div>
+                    </a>
+<a href="/author/xinyu/">
+                        <div class="author-card">
+                            <div class="profile-image">
+                                <img src="/content/images/size/w300/2023/04/my-profile-picture.jpeg" alt="Xinyu Li">
+                            </div>
+                            <h2>Xinyu Li</h2>
+                            <p>Music junkie. Internet lover.</p>
+                        </div>
+                    </a>
+<a href="/author/xinyu/">
+                        <div class="author-card">
+                            <div class="profile-image">
+                                <img src="/content/images/size/w300/2023/04/my-profile-picture.jpeg" alt="Xinyu Li">
+                            </div>
+                            <h2>Xinyu Li</h2>
+                            <p>Music junkie. Internet lover.</p>
+                        </div>
+                    </a>
+
+
+
+        </div>
     </section>
-
 
 </article>
 </main>
