--- a/partials/feature-image-to-banner.hbs
+++ b/partials/feature-image-to-banner.hbs
@@ -5,59 +5,61 @@ This script
 3. adjust padding and margin
  --}}
 
-{{#if feature_image}}
 
-    <style>
-    .article-image {
-        color: white;
-    }
-    .article-image .image-container {
-        position: relative;
-    }
+
+<style>
+.article-image {
+    color: white;
+}
+.article-image .image-container {
+    position: relative;
+}
+.article-image .image-container img {
+    display: block;
+    width: 100%;
+    height: 250px;
+}
+.article-image .image-container:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(10, 49, 125, 0.5));
+    z-index: 1;
+}
+.article-image header {
+    position: absolute;
+    top: 260px;
+    z-index: 2;
+    width: 100%;
+}
+.article-image header h1 {
+    color: white;
+}
+
+.page-with-banner .article {
+    padding: max(8vmin,40px) 0 max(8vmin,64px);
+}
+
+
+@media (max-width: 800px) {
     .article-image .image-container img {
-        display: block;
-        width: 100%;
-        height: 250px;
-    }
-    .article-image .image-container:after {
-        content: "";
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(10, 49, 125, 0.5));
-        z-index: 1;
+        height: 150px;
     }
     .article-image header {
-        position: absolute;
-        top: 260px;
-        z-index: 2;
+        top: 150px;
     }
-    .article-image header h1 {
-        color: white;
-    }
+}
+</style>
 
-    .page-with-banner .article {
-        padding: max(8vmin,40px) 0 max(8vmin,64px);
-    }
-
-    @media (max-width: 800px) {
-        .article-image .image-container img {
-            height: 150px;
-        }
-        .article-image header {
-            top: 150px;
-        }
-    }
-
-
-    </style>
 
     <figure class="article-image">
         <div class="image-container">
             {{!-- This is a responsive image, it loads different sizes depending on device
             https://medium.freecodecamp.org/a-guide-to-responsive-images-with-ready-to-use-templates-c400bd65c433 --}}
+            {{#if feature_image}}
             <img
                 srcset="{{img_url feature_image size="s"}} 300w,
                         {{img_url feature_image size="m"}} 600w,
@@ -67,13 +69,19 @@ This script
                 src="{{img_url feature_image size="xl"}}"
                 alt="{{#if feature_image_alt}}{{feature_image_alt}}{{else}}{{title}}{{/if}}"
             />
+            {{else}}
+            <img
+                sizes="(min-width: 1400px) 1400px"
+                src="/content/images/size/w2000/2023/04/dummy-hero-image-1.jpg"
+            />
+            {{/if}}
         </div>  
 
-        <header class="article-header gh-canvas">
-            <h1 class="article-title">{{title}}</h1>
+        <header class="article-header gh-canvas outer">
+            <h1 class="article-title inner">{{title}}</h1>
         </header>
     </figure>
-{{/if}}
+
 
 <script type="text/javascript">
     document.getElementById("site-main").classList.add("page-with-banner");
