--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -13,9 +13,9 @@
 
     {{> nav-megamenu/research }}
 
-    {{> nav-megamenu/policy }}
+    {{!-- {{> nav-megamenu/policy }} --}}
 
-    {{> nav-megamenu/education }}
+    {{!-- {{> nav-megamenu/education }} --}}
 
     {{> nav-megamenu/events }}
 </nav>
