exclude leader and staff in experts page

--- a/custom-about: experts.hbs
+++ b/custom-about: experts.hbs
@@ -18,7 +18,7 @@ into the {body} tag of the default.hbs template --}}
         <link rel="stylesheet" type="text/css" href="{{asset "built/author-list.css"}}" />
 
         <div class="author-grid">
-            {{#get "authors" limit="all"}}
+            {{#get "authors" filter="slug:~'author_'" limit="all"}}
                 {{#foreach authors}}
                     <a href="{{url}}">
                         <div class="author-card">
@@ -35,99 +35,6 @@ into the {body} tag of the default.hbs template --}}
                     </a>
                 {{/foreach}}
             {{/get}}
-<a href="/author/xinyu/">
-                        <div class="author-card">
-                            <div class="profile-image">
-                                <img src="/content/images/size/w300/2023/04/my-profile-picture.jpeg" alt="Xinyu Li">
-                            </div>
-                            <h2>Xinyu Li</h2>
-                            <p>Music junkie. Internet lover.</p>
-                        </div>
-                    </a>
-<a href="/author/xinyu/">
-                        <div class="author-card">
-                            <div class="profile-image">
-                                <img src="/content/images/size/w300/2023/04/my-profile-picture.jpeg" alt="Xinyu Li">
-                            </div>
-                            <h2>Xinyu Li</h2>
-                            <p>Music junkie. Internet lover.</p>
-                        </div>
-                    </a>
-<a href="/author/xinyu/">
-                        <div class="author-card">
-                            <div class="profile-image">
-                                <img src="/content/images/size/w300/2023/04/my-profile-picture.jpeg" alt="Xinyu Li">
-                            </div>
-                            <h2>Xinyu Li</h2>
-                            <p>Music junkie. Internet lover.</p>
-                        </div>
-                    </a>
-<a href="/author/xinyu/">
-                        <div class="author-card">
-                            <div class="profile-image">
-                                <img src="/content/images/size/w300/2023/04/my-profile-picture.jpeg" alt="Xinyu Li">
-                            </div>
-                            <h2>Xinyu Li</h2>
-                            <p>Music junkie. Internet lover.</p>
-                        </div>
-                    </a>
-<a href="/author/xinyu/">
-                        <div class="author-card">
-                            <div class="profile-image">
-                                <img src="/content/images/size/w300/2023/04/my-profile-picture.jpeg" alt="Xinyu Li">
-                            </div>
-                            <h2>Xinyu Li</h2>
-                            <p>Music junkie. Internet lover.</p>
-                        </div>
-                    </a>
-<a href="/author/xinyu/">
-                        <div class="author-card">
-                            <div class="profile-image">
-                                <img src="/content/images/size/w300/2023/04/my-profile-picture.jpeg" alt="Xinyu Li">
-                            </div>
-                            <h2>Xinyu Li</h2>
-                            <p>Music junkie. Internet lover.</p>
-                        </div>
-                    </a>
-<a href="/author/xinyu/">
-                        <div class="author-card">
-                            <div class="profile-image">
-                                <img src="/content/images/size/w300/2023/04/my-profile-picture.jpeg" alt="Xinyu Li">
-                            </div>
-                            <h2>Xinyu Li</h2>
-                            <p>Music junkie. Internet lover.</p>
-                        </div>
-                    </a>
-<a href="/author/xinyu/">
-                        <div class="author-card">
-                            <div class="profile-image">
-                                <img src="/content/images/size/w300/2023/04/my-profile-picture.jpeg" alt="Xinyu Li">
-                            </div>
-                            <h2>Xinyu Li</h2>
-                            <p>Music junkie. Internet lover.</p>
-                        </div>
-                    </a>
-<a href="/author/xinyu/">
-                        <div class="author-card">
-                            <div class="profile-image">
-                                <img src="/content/images/size/w300/2023/04/my-profile-picture.jpeg" alt="Xinyu Li">
-                            </div>
-                            <h2>Xinyu Li</h2>
-                            <p>Music junkie. Internet lover.</p>
-                        </div>
-                    </a>
-<a href="/author/xinyu/">
-                        <div class="author-card">
-                            <div class="profile-image">
-                                <img src="/content/images/size/w300/2023/04/my-profile-picture.jpeg" alt="Xinyu Li">
-                            </div>
-                            <h2>Xinyu Li</h2>
-                            <p>Music junkie. Internet lover.</p>
-                        </div>
-                    </a>
-
-
-
         </div>
     </section>
 
