--- a/partials/nav-megamenu/maps.hbs
+++ b/partials/nav-megamenu/maps.hbs
@@ -19,7 +19,7 @@
                         <div style="display:flex; flex-direction: column; align-items:center">
                             <a href="/infrastructure-map">
                                 <img 
-                                    src="{{asset "image/dummy_image.jpg"}}" 
+                                    src="{{asset "image/dummy_image.webp"}}" 
                                     alt="Image 1" 
                                     class="img-fluid mb-2">
                                 <h5 class="text-uppercase font-weight-bold">Infrastructure Map of Global China</h5>
@@ -32,7 +32,7 @@
                     <div class="pt-2">
                         <div style="display:flex; flex-direction: column; align-items:center">
                             <a href="/digital-map">
-                                <img src="{{asset "image/dummy_image.jpg"}}" alt="Image 2" class="img-fluid mb-2">
+                                <img src="{{asset "image/dummy_image.webp"}}" alt="Image 2" class="img-fluid mb-2">
                                 <h5 class="text-uppercase font-weight-bold">Digital Map of Global China</h5>
                             </a>
                         </div>
@@ -43,7 +43,7 @@
                     <div class="pt-2">
                         <div style="display:flex; flex-direction: column; align-items:center">
                             <a href="/belt-and-road-map">
-                                <img src="{{asset "image/dummy_image.jpg"}}" alt="Image 3" class="img-fluid mb-2">
+                                <img src="{{asset "image/dummy_image.webp"}}" alt="Image 3" class="img-fluid mb-2">
                                 <h5 class="text-uppercase font-weight-bold">Belt and Road Initiative</h5>
                             </a>
                         </div>
