--- a/index.hbs
+++ b/index.hbs
@@ -48,7 +48,7 @@ into the {body} of the default.hbs template --}}
 </div>
 
 {{!-- The main content area --}}
-<main id="site-main" class="site-main outer">
+<main id="site-main" class="site-main outer no-infinite-scroll">
 <div class="inner posts">
 
     {{> "carousel-slider"}}
