change author page and post layout

--- a/assets/css/author-list.css
+++ b/assets/css/author-list.css
@@ -9,6 +9,10 @@
     text-decoration: none;
 }
 
+.author-grid a:hover {
+    text-decoration: none;
+}
+
 .author-card {
     border: 1px solid #eee;
     padding: 20px;
