--- a/custom-about: team.hbs
+++ b/custom-about: team.hbs
@@ -16,13 +16,14 @@ into the {body} tag of the default.hbs template --}}
     <section class="gh-content gh-canvas">
         {{content}}
 
-        <link rel="stylesheet" type="text/css" href="{{asset "built/author-list.css"}}" />
+        
 
         {{!-- get all leaders by filtering with special slug --}}
         <h1>Leadership</h1>
+        <link rel="stylesheet" type="text/css" href="{{asset "built/author-list.css"}}" />
         <div class="author-grid">
         {{!-- A leader must has special slug: "#leader NAME" --}}
-        {{#get "authors" filter="slug:~'leader_'" limit="all"}}
+        {{#get "authors" filter="slug:~'leader-'" limit="all"}}
         {{#foreach authors}}
             {{!-- the leader / staff card should lead to their personal websites if they upload ones to their profile --}}
             {{#if website}}
@@ -48,9 +49,10 @@ into the {body} tag of the default.hbs template --}}
 
         {{!-- get all staffs by filtering with special slug --}}
         <h1>Staff</h1>  
+        
         <div class="author-grid">
         {{!-- A leader must has special slug: "#leader NAME" --}}
-        {{#get "authors" filter="slug:~'staff_'" limit="all"}}
+        {{#get "authors" filter="slug:~'staff-'" limit="all"}}
         {{#foreach authors}}
             {{#if website}}
             <a href="{{website}}">
