--- a/post.hbs
+++ b/post.hbs
@@ -82,7 +82,7 @@ into the {body} tag of the default.hbs template --}}
         {{content}}
 
         {{!-- a collapsable display of pdf version of the post --}}
-        {{> "post-pdf"}}
+        {{!-- {{> "post-pdf"}} --}}
 
     </section>
 
