--- a/author.hbs
+++ b/author.hbs
@@ -28,19 +28,38 @@
             <div class="post-card-content">
             <div class="post-card-content-link">
 
-                {{#if profile_image}}
-                    <img class="author-profile-pic" src="{{profile_image}}" alt="{{name}}" />
-                {{/if}}
 
-                <header class="post-card-header">
-                    <h2 class="post-card-title">{{name}}</h2>
-                </header>
+                <link rel="stylesheet" type="text/css" href="{{asset "built/author-list.css"}}" />
+                <div class="author-grid">
+                {{!-- A leader must has special slug: "#leader NAME" --}}
+                    {{!-- the leader / staff card should lead to their personal websites if they upload ones to their profile --}}
+                    {{#if website}}
+                    <a href="{{website}}">
+                    {{/if}}
+                        <div class="author-card">
+                            <div class="profile-image">
+                            {{#if profile_image}}
+                                <img src="{{img_url profile_image size="s"}}" alt="{{name}}">
+                            {{else}}
+                                <span class="profile-image-placeholder">{{name.[0]}}</span>
+                            {{/if}}
+                            </div>
 
-                {{#if bio}}
-                    <div class="post-card-excerpt">{{bio}}</div>
-                {{/if}}
+                            <header class="post-card-header">
+                                <h2 class="post-card-title">{{name}}</h2>
+                            </header>
+                            <br>
+                            <p>{{bio}}</p>
+                            {{#if location}}
+                                <div class="author-profile-location">{{location}}</div>
+                            {{/if}}
+                        </div>
+                    {{#if website}}
+                    </a>
+                    {{/if}}
+                </div>
 
-                <footer class="author-profile-footer">
+                {{!-- <footer class="author-profile-footer">
                     {{#if location}}
                         <div class="author-profile-location">{{location}}</div>
                     {{/if}}
@@ -55,7 +74,7 @@
                             <a class="author-profile-social-link" href="{{facebook_url}}" target="_blank" rel="noopener">{{> "icons/facebook"}}</a>
                         {{/if}}
                     </div>
-                </footer>
+                </footer> --}}
 
             </div>
             </div>
