--- a/custom-about: experts.hbs
+++ b/custom-about: experts.hbs
@@ -18,7 +18,7 @@ into the {body} tag of the default.hbs template --}}
         <link rel="stylesheet" type="text/css" href="{{asset "built/author-list.css"}}" />
 
         <div class="author-grid">
-            {{#get "authors" filter="slug:~'author_'" limit="all"}}
+            {{#get "authors" filter="slug:~'author-'" limit="all"}}
                 {{#foreach authors}}
                     <a href="{{url}}">
                         <div class="author-card">
