--- a/partials/nav-megamenu/maps.hbs
+++ b/partials/nav-megamenu/maps.hbs
@@ -1,3 +1,14 @@
+<style>
+    .pt-2 {
+        width: 100%;
+    }
+
+    @media (max-width: 800px) {
+        .pt-2 {
+            width: 50%;
+        }
+    }
+</style>
 <li class="nav-item dropdown">
     <a class="nav-link" href="#">Maps</a>
     <!-- Dropdown menu -->
