--- a/partials/nav-megamenu/about.hbs
+++ b/partials/nav-megamenu/about.hbs
@@ -2,7 +2,7 @@
     <a class="nav-link animated-underscore" href="#">About</a>
     <!-- Dropdown menu -->
     <div class="dropdown-menu mt-0" aria-labelledby="navbarDropdown" style="position: absolute; inset: 0px auto auto 0px;;" data-popper-placement="bottom-start" data-mdb-popper="null">
-        <div class="container">
+        <div class="dropdown-container">
             <div class="row my-3 d-flex">
                 <div class="col-md-12 col-lg-4 mb-3 mb-lg-0" style="flex-grow: 1;">
                     <div class="pt-2">
