--- a/partials/nav-megamenu/maps.hbs
+++ b/partials/nav-megamenu/maps.hbs
@@ -1,19 +1,8 @@
-<style>
-    .pt-2 {
-        width: 100%;
-    }
-
-    @media (max-width: 800px) {
-        .pt-2 {
-            width: 50%;
-        }
-    }
-</style>
 <li class="nav-item dropdown">
     <a class="nav-link" href="#">Maps</a>
     <!-- Dropdown menu -->
     <div class="dropdown-menu mt-0" aria-labelledby="navbarDropdown" style="border-top-left-radius: 0px; border-top-right-radius: 0px; position: absolute; inset: 0px auto auto 0px;;" data-popper-placement="bottom-start" data-mdb-popper="null">
-        <div class="container">
+        <div class="dropdown-container">
             <div class="row my-3">
                 <div class="col-md-6 col-xl-3 mb-3 mb-xl-0">
                     <div class="pt-2">
