--- a/custom-about: team.hbs
+++ b/custom-about: team.hbs
@@ -22,7 +22,7 @@ into the {body} tag of the default.hbs template --}}
         <h1>Leadership</h1>
         <link rel="stylesheet" type="text/css" href="{{asset "built/author-list.css"}}" />
         <div class="author-grid">
-        {{!-- A leader must has special slug: "#leader NAME" --}}
+        {{!-- A leader must has special slug: "leader-NAME" --}}
         {{#get "authors" filter="slug:~'leader-maria'" limit="all"}}
         {{#foreach authors}}
             {{!-- the leader / staff card should lead to their personal websites if they upload ones to their profile --}}
@@ -73,7 +73,7 @@ into the {body} tag of the default.hbs template --}}
         <h1>Staff</h1>  
         
         <div class="author-grid">
-        {{!-- A leader must has special slug: "#leader NAME" --}}
+        {{!-- A staff must has special slug: "staff-NAME" --}}
         {{#get "authors" filter="slug:~'staff-'" limit="all"}}
         {{#foreach authors}}
             {{#if website}}
