--- a/partials/feature-image-to-banner.hbs
+++ b/partials/feature-image-to-banner.hbs
@@ -40,7 +40,7 @@ This script
 }
 
 .page-with-banner .article {
-    padding: max(8vmin,40px) 0 max(8vmin,64px);
+    padding: 40px;
 }
 
 
@@ -50,6 +50,9 @@ This script
     }
     .article-image header {
         top: 150px;
+    }
+    .page-with-banner .article {
+        padding: 20px;
     }
 }
 </style>
@@ -85,4 +88,9 @@ This script
 
 <script type="text/javascript">
     document.getElementById("site-main").classList.add("page-with-banner");
+    // place header s.t. its bottom is 10px above the bottom of the image
+    window.onresize = function() {
+        $(".article-header").css("top", $(".image-container").height() + $(".gh-head.outer").height() - $(".article-header").height() - 10 + "px");
+    }
+    window.onresize();
 </script>
