fix maps filter regex

--- a/partials/nav-megamenu/maps.hbs
+++ b/partials/nav-megamenu/maps.hbs
@@ -14,7 +14,7 @@
                 </div>
             </div>
             <div class="row my-3">
-                {{#get "pages" filter="slug:~'map-'" limit="all"}}
+                {{#get "pages" filter="slug:~'maps-'" limit="all"}}
                     {{#foreach pages}}
                         <div class="col-md-12 col-lg-4 mb-3 mb-lg-0">
                             <div class="pt-2">
