--- a/partials/pagination.hbs
+++ b/partials/pagination.hbs
@@ -17,7 +17,7 @@
             <i class="fas fa-angle-right"></i>
         </a>
     {{/if}}
-    <a class="last-page" href="{{page_url 10}}">
+    <a class="last-page" href="{{page_url pages}}">
         <i class="fas fa-angle-double-right"></i>
     </a>
 </nav>
